# SurveySimulator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README_runOptimizationExperiment.md  compare_csv_line.py  compose.yaml  offline_inference.py  resident_worker.py  resident_worker_0.py
.github/workflows/: ci.yml
data/: 2015_001_8+_47356.csv  merged_population_responses.csv  prompt_template.txt  sample_synthetic_population.csv  ssm2015.csv  survey_results.csv  verification_population.csv
data/prompt_templates/: detailed_prompt_template.txt  prompt_template.txt  prompt_template_BFI2.txt  prompt_template_PVQ_schwartz.txt  prompt_template_complex.txt  prompt_template_schwartz.txt  user_prompt_template.txt
data/prompt_templates/forQwen/: qwen_bfi2.txt  qwen_bigfive.txt  qwen_pvq.txt  qwen_schwartz.txt
include/: ThreadSafeQueue.hpp  cross_table_generator.hpp  csv_comparer.hpp  data_loader.hpp  experiment_runner.hpp  experiment_runner_parallel.hpp  globals.hpp  individual_response_manager.hpp  individual_responses.hpp  llm_client.hpp  llm_offline.hpp  optimization_manager.hpp  person.hpp  prompt_generator.hpp  question.hpp  response_parser.hpp  simulation_runner.hpp  survey_results.hpp  thread_worker.hpp
llm_server/: server.py  start_server.sh  start_server_parallel.sh  start_server_single.sh
results/: for_test_individual_responses.csv  individual_responses.csv  survey_results.csv
src/: CMakeLists.txt  cross_table_generator.cpp  csv_comparer.cpp  data_loader.cpp  experiment_runner.cpp  experiment_runner_parallel.cpp  individual_response_manager.cpp  llm_client.cpp  llm_offline.cpp  main.cpp  optimization_manager.cpp  prompt_generator.cpp  response_parser.cpp  simulation_runner.cpp  survey_results.cpp  thread_worker.cpp
tests/: CMakeLists.txt  individual_response_manager_test.cpp  prompt_generator_test.cpp  response_parser_test.cpp  simulation_runner_test.cpp
